--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             border: 1px solid black; 
             display: block;
             margin: 0 auto; 
+            background-color: aquamarine;
         }
     </style>
     </style>
@@ -21,9 +22,6 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
 
-
-    ctx.fillStyle = "rgb(0, 0, 0)";
-    ctx.fillRect(0, 0, canvas.width, canvas.height);
     ctx.fillStyle = 'green';
     ctx.fillRect(450, 200, 100, 100);
     ctx.clearRect(460, 210, 80, 80)
