--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
     ctx.fillStyle = 'green';
     ctx.fillRect(450, 200, 100, 100);
-    ctx.clearRect(460, 210, 80, 80)
+    ctx.clearRect(460, 210, 80, 80);
 
+    ctx.fillStyle = "red";
+    ctx.fillRect(400, 150, 50, 50);
 </script>
 </html>
