반타원을 그리자

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
 
     ctx.fillStyle = "red";
     ctx.fillRect(400, 150, 50, 50);
+
+    ctx.fillStyle = 'green';
+    ctx.beginPath();
+    ctx.ellipse(240, 75, 50, 30, Math.PI * .25, 0, Math.PI, true);
+    ctx.fill();
 </script>
 </html>
