--- a/index.html
+++ b/index.html
@@ -26,12 +26,9 @@
     ctx.fillRect(450, 200, 100, 100);
     ctx.clearRect(460, 210, 80, 80);
 
-    ctx.fillStyle = "red";
-    ctx.fillRect(400, 150, 50, 50);
-
-    ctx.fillStyle = 'green';
+    ctx.fillStyle = 'gray';
     ctx.beginPath();
-    ctx.ellipse(240, 75, 50, 30, Math.PI * .25, 0, Math.PI, true);
+    ctx.ellipse(500, 500, 250, 150, 0, Math.PI, true);
     ctx.fill();
 </script>
 </html>
