--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <button aligen = "left">START or STOP</button>
     <canvas id="canvas" width="1000" height="500" ></canvas>
 </body>
 <script src="main.js"></script>
