--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 <body>
     <button aligen = "left">START or STOP</button>
     <canvas id="canvas" width="1000" height="500" ></canvas>
+    <script src="main.js"></script>
+    <script src="button.js"></script>
 </body>
-<script src="main.js"></script>
