just everything in file
귀찮은거 빼고 걍 다 하나로 합침

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
     </style>
 </head>
 <body>
-    <button aligen = "left">START or STOP</button>
+    <button id = "button">START or STOP</button>
     <canvas id="canvas" width="1000" height="500" ></canvas>
     <script src="main.js"></script>
-    <script src="button.js"></script>
 </body>
