new thing to eddit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+    <h1>put introduction at here</h1>
     <button id = "button">START or STOP</button>
     <canvas id="canvas" width="1000" height="500" ></canvas>
     <script src="main.js"></script>
