--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
             margin: 0 auto; 
             background-color: aquamarine;
         }
+        
+        .detail {
+            font-size: 25px;
+        }
     </style>
     </style>
 </head>
 <body>
-    <h1>put introduction at here</h1>
+    <details class="detail">
+        <summary>Instroduction</summary>
+        <span>this game is basic airplane simulator made by AY</span>
+    </details>
     <button id = "button">START or STOP</button>
     <canvas id="canvas" width="1000" height="500" ></canvas>
     <script src="main.js"></script>
